--- a/Validators.IO.Developers/Views/_ViewImports.cshtml
+++ b/Validators.IO.Developers/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using Validators.IO.Developers
 @using Validators.IO.Developers.Models
+@using Validators.IO.Developers.Database.Entities
+@using Validators.IO.Developers.Controllers
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
