--- a/Validators.IO.Developers/wwwroot/css/site.css
+++ b/Validators.IO.Developers/wwwroot/css/site.css
@@ -1,6 +1,20 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+.pointer:hover
+{
+	cursor: pointer !important;
+}
+.copy {
+	margin-left: 20px;
+}
+	.copy:hover {
+		color: blue;
+	}
+	.copy:active {
+		font-weight: bold;
+	}
+
 a.navbar-brand {
   white-space: normal;
   text-align: center;
