--- a/Validators.IO.Developers/Views/Shared/_Layout.cshtml
+++ b/Validators.IO.Developers/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
     <header>
         <nav class="navbar navbar-expand-md navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Validators.io</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Validators.io Developer Portal</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -35,7 +35,7 @@
 				<div class="navbar-collapse collapse">
 					<ul class="navbar-nav  mr-auto ">
 						<li class="nav-item">
-							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Dashboard">Projects</a>
+							<a class="nav-link text-dark" asp-area="" asp-controller="Project" asp-action="Dashboard">Projects</a>
 						</li>
 						<li class="nav-item dropdown">
 							<a class="nav-link text-dark dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
